...
              Theme.of(context).brightness,
            ),
            child: Column(
              mainAxisSize: MainAxisSize.min,
              children: [
                FlatmatesMenuItem(
                  key: const Key('preferences_menu_item'),
                  dense: true,
                  icon: AppIcons.filter,
                  label: locale.preferencesLabel,
                  onTap: () => showPreferencesSheet(context),
                ),
                const _MenuDivider(),
...
                  icon: Icons.notifications_outlined,
                  label: locale.notificationSettingsLabel,
                  onTap: () => context.push('/notification-settings'),
                ),
                const _MenuDivider(),
                FlatmatesMenuItem(
                  key: const Key('profile_settings_menu_item'),
                  dense: true,
                  icon: Icons.settings_outlined,
                  label: locale.settingsTitle,
                  onTap: () => context.push('/profile/settings'),
                ),
                const _MenuDivider(),
...
